--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "styled-components": "^5.1.1"
